# nullbox

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  install.sh  run.sh
.cargo/: config.toml
accelerator/: README.md
cmd/nullctl/: Cargo.toml
cmd/nullctl/src/: main.rs
cmd/nulld/: Cargo.toml
cmd/nulld/src/: config.rs  control.rs  main.rs  mount.rs  supervisor.rs
docs/: PHASE1_PLAN.md  Untitled
docs/research/: ADOPT_VS_BUILD.md  COMPETITIVE_LANDSCAPE.md  MARKET_ANALYSIS.md  SECURITY_CRISIS_2026.md  TECHNOLOGY_LANDSCAPE.md
docs/superpowers/plans/: 2026-03-29-nullbox-landing-page.md
docs/superpowers/specs/: 2026-03-29-nullbox-landing-page-design.md
edge-power/: README.md
forge/: README.md
gate/: README.md
harbor/: README.md
image/scripts/: build-initramfs.sh  build-iso.sh  build-squashfs.sh  e2e-test.sh  prepare-agent-rootfs.sh  smoke-test.sh  test-qemu.sh
kernel/: README.md
kernel/config/: x86_64_defconfig
kernel/scripts/: build-kernel.sh
phoenix/: README.md
pkg/cage/: Cargo.toml  build.rs
pkg/cage/src/: deploy.rs  fs_sandbox.rs  krun.rs  lib.rs  main.rs  manifest.rs  seccomp.rs  vm.rs
pkg/ctxgraph/: Cargo.toml
pkg/ctxgraph/src/: entry.rs  main.rs  store.rs
pkg/egress/: Cargo.toml
pkg/egress/src/: firewall.rs  main.rs
pkg/nullweb/: Cargo.toml
pkg/nullweb/src/: dashboard.html  html.rs  main.rs  routes.rs
pkg/test-agent/: Cargo.toml
pkg/test-agent/src/: main.rs
pkg/test-harness/: Cargo.toml
provenance/: README.md
registry/: agents.json
snapshots/: README.md
swarm/: README.md
(+6 files in other folders)
