[package]
name = "cage"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cage"
path = "src/lib.rs"

[[bin]]
name = "cage"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
nix = { version = "0.29", features = ["mount", "sched", "process", "fs", "signal"] }
thiserror = "2"
libc = "0.2"
base64 = "0.22"
flate2 = "1"
tar = "0.4"

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3"
